# cpp-toolbox

./: .clang-tidy  .gitignore  3dsc__extractor_8hpp.html  3dsc__extractor_8hpp.js  3dsc__extractor_8hpp__dep__incl.dot  3dsc__extractor_8hpp__incl.dot  3dsc__extractor_8hpp_source.html  3dsc__extractor__old_8hpp.html  3dsc__extractor__old_8hpp.js  3dsc__extractor__old_8hpp__incl.dot  3dsc__extractor__old_8hpp_source.html  AGENTS.md  BUILDING.md  Basic-example.html  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Combining-example.html  HACKING.md  LICENSE  Logging-example.html  Makefile  README.md  README_8md.html  Tuple-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2base_2env_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2base_2object_pool_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2base_2thread_pool_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2base_2thread_pool_singleton_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2container_2lock_free_queue_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2container_2string_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2file_2file_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2functional_2functional_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2logger_2thread_logger_8hpp-example.html  _2home_2runner_2work_2cpp-toolbox_2cpp-toolbox_2src_2include_2cpp-toolbox_2utils_2timer_8hpp-example.html  _b_u_i_l_d_i_n_g_8md.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_d_e___s_t_y_l_e_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  (+2450 more)
benchmark/: CMakeLists.txt  xmake.lua
benchmark/concurrent/: parallel_benc.cpp
benchmark/file/: memory_mapped_file_benc.cpp
benchmark/pcl/: correspondence_benc.cpp  descriptors_benc.cpp  descriptors_benc_simple.cpp  descriptors_debug.cpp  downsampling_benc.cpp  features_benc.cpp  fine_registration_benc.cpp  fpfh_vs_pfh_test.cpp  knn_benc.cpp  norm_benc.cpp  prosac_vs_ransac_benc.cpp  registration_benc.cpp
benchmark/types/: point_transform_bench.cpp  types_benc.cpp
example/: CMakeLists.txt  click_example.cpp  dataloader_example.cpp  example.ini  kitti_dataset_example.cpp  kitti_pcd_dataset_example.cpp  plot_example.cpp  point_cloud_transform_example.cpp  print_example.cpp  prosac_registration_example.cpp  prosac_registration_simple.cpp  registration_example.cpp  thread_logger_example.cpp  xmake.lua
src/: CMakeLists.txt  cpp_toolbox.hpp
src/impl/cpp-toolbox/: CMakeLists.txt  pch.hpp
src/impl/cpp-toolbox/base/: CMakeLists.txt  env.cpp  thread_pool.cpp  thread_pool_old.cpp  thread_pool_old.cpp_bak  thread_pool_singleton.cpp
src/impl/cpp-toolbox/container/: concurrent_queue.cpp  string.cpp  string.hpp
src/impl/cpp-toolbox/file/: CMakeLists.txt  file.cpp  memory_mapped_file.cpp
src/impl/cpp-toolbox/functional/: functional.cpp
src/impl/cpp-toolbox/io/: kitti.cpp  kitti_pcd.cpp  pcd.cpp
src/impl/cpp-toolbox/logger/: CMakeLists.txt  thread_logger.cpp
src/impl/cpp-toolbox/types/: minmax.cpp  point.cpp
src/impl/cpp-toolbox/utils/: click.cpp  ini_config.cpp  plot.cpp  print.cpp  random.cpp  timer.cpp
src/include/cpp-toolbox/: base.hpp  cpp-toolbox.hpp  macro.hpp  metrics.hpp  type_traits.hpp  types.hpp
src/include/cpp-toolbox/base/: env.hpp  memory_pool.hpp  object_pool.hpp  thread_pool.hpp  thread_pool_old.hpp  thread_pool_singleton.hpp
src/include/cpp-toolbox/concurrent/: parallel.hpp
src/include/cpp-toolbox/container/: concurrent_queue.hpp  lock_free_queue.hpp  string.hpp
src/include/cpp-toolbox/file/: file.hpp  memory_mapped_file.hpp
src/include/cpp-toolbox/functional/: functional.hpp
src/include/cpp-toolbox/io/: formats.hpp
src/include/cpp-toolbox/logger/: thread_logger.hpp
src/include/cpp-toolbox/macro/: class.hpp  endian.hpp  platforms.hpp
src/include/cpp-toolbox/math/: statistics.hpp  vector.hpp
src/include/cpp-toolbox/metrics/: angular_metrics.hpp  base_metric.hpp  custom_metric.hpp  histogram_metrics.hpp  metric_factory.hpp  metric_traits.hpp  point_cloud_metrics.hpp  point_metric_adapter.hpp  vector_metrics.hpp
src/include/cpp-toolbox/types/: minmax.hpp  point.hpp  point_utils.hpp
src/include/cpp-toolbox/utils/: click.hpp  ini_config.hpp  ini_struct.hpp  plot.hpp  print.hpp  (+2 more)
test/: CMakeLists.txt  my_catch2_main.cpp  test_data_dir.hpp.in  test_data_dir.xmake.hpp.in  xmake.lua
test/base/: CMakeLists.txt  env_test.cpp  memory_pool_test.cpp  thread_pool_singleton_test.cpp  thread_pool_test.cpp
test/concurrent/: CMakeLists.txt  parallel_test.cpp
test/container/: CMakeLists.txt  lock_free_queue_test.cpp  string_test.cpp
test/data/: sample.ini
test/file/: CMakeLists.txt  file_test.cpp  memory_mapped_file_test.cpp
test/functional/: CMakeLists.txt  functional_test.cpp
test/io/: CMakeLists.txt  dataloader_test.cpp  kitti_dataset_test.cpp  kitti_test.cpp  pcd_test.cpp
test/logger/: CMakeLists.txt  thread_logger_test.cpp
test/math/: CMakeLists.txt  statistics_test.cpp
test/metrics/: CMakeLists.txt  metrics_test.cpp
test/pcl/: CMakeLists.txt  aa_icp_debug_test.cpp  correspondence_sorter_test.cpp  correspondence_test.cpp  descriptors_debug.cpp  descriptors_debug2.cpp  descriptors_test.cpp  features_test.cpp  filter_test.cpp  fine_registration_debug_test.cpp  fine_registration_test.cpp  fine_registration_transform_test.cpp  icp_simple_test.cpp  knn_test.cpp  norm_test.cpp  prosac_registration_test.cpp  registration_test.cpp
test/source/: cpp-toolbox-new_test.cpp
test/types/: CMakeLists.txt  point_utils_test.cpp  types_test.cpp
test/utils/: CMakeLists.txt  click_test.cpp  ini_config_test.cpp  ini_struct_test.cpp  random_test.cpp  timer_test.cpp
tests/: CMakeLists.txt  env_test.cpp  logger_test.cpp  str_test.cpp  thread_test.cpp
(+544 files in other folders)
